installdir = $(libdir)/enigma2/python/Plugins/SkinComponents/EventList
rendererinstalldir = $(libdir)/enigma2/python/Components/Renderer
converterinstalldir = $(libdir)/enigma2/python/Components/Converter
install_DATA = README
rendererinstall_PYTHON = EventListDisplay.py
converterinstall_PYTHON = EventList.py
