SUBDIRS = servicewebts icons

plugindir = $(libdir)/enigma2/python/Plugins/Extensions/Partnerbox

plugin_PYTHON = \
	PartnerboxEPGList.py \
	PartnerboxEPGSelection.py \
	PartnerboxFunctions.py \
	PartnerboxSetup.py \
	RemoteTimerEntry.py \
	Services.py \
	__init__.py \
	plugin.py

plugin_DATA = \
	ExPlayer.png \
	maintainer.info \
	Setup_Partnerbox.png
