plugindir = $(libdir)/enigma2/python/Plugins/Extensions/VlcPlayer

plugin_PYTHON = \
	VlcFileList.py \
	VlcMediaList.py \
	VlcPlayList.py \
	VlcPlayer.py \
	VlcServer.py \
	VlcServerConfig.py \
	VlcServerList.py \
	__init__.py \
	plugin.py

plugin_DATA = \
	maintainer.info \
	playlist.png \
	plugin.png \
	vlc.png \
	vlc_default.png
