installdir = $(libdir)/enigma2/python/Plugins/Extensions/WebInterface/web-data/fonts/

install_DATA = \
	fonts.css \
	roboto-bold-webfont.eot \
	roboto-bold-webfont.svg \
	roboto-bold-webfont.ttf \
	roboto-bold-webfont.woff \
	roboto-regular-webfont.eot \
	roboto-regular-webfont.svg \
	roboto-regular-webfont.ttf \
	roboto-regular-webfont.woff \
	FontAwesome.otf \
	fontawesome-webfont.eot \
	fontawesome-webfont.svg \
	fontawesome-webfont.ttf \
	fontawesome-webfont.woff \
	fontawesome-webfont.woff2
