installdir = $(libdir)/enigma2/python/Plugins/Extensions/WebInterface/web-data/tpl/default/

SUBDIRS = streaminterface

install_DATA = 	default.appcache \
				index.html \
				multiepg.css \
				style.min.css \
				style_light.min.css \
				style_merlin_dark.min.css \
				style_modern.min.css \
				style.css \
				*.htm